--- a/views/index.pug
+++ b/views/index.pug
@@ -15,3 +15,5 @@ block content
           document.getElementById("faster").textContent = "MPH " + mph + " with change " + change; 
       }
 
+  br
+  a(href="/desserts")  Desserts
